fix overflow

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body, html {
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-user-select: none;   
     touch-action: none;
+    overflow: scroll;
 }
 
 .gameWindow{
